Allow debug symbols from external libs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,7 @@
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}",
+            "justMyCode": false,
         }
     ]
 }
